# https-everywhere-else

./: .gitmodules  README.md  cli.go  default.nix  find-tests.py  https-everywhere-rules.cabal  main.go  proxy.go  rules  rules.go  rules_test.go  stack.yaml  tests.xml
cli/: cli.go
dummy/: README.md  dummy.go
examples/: CountUpgradeable.hs  RedirectProxy.hs
hee-proxy/: proxy.go
proxy/: proxy.go
regex/: regex.go
rules/: regex.go  rules.go  rules_test.go
src/: Paths_https_everywhere_rules.hs
src/Data/ByteString/: RadixTrie.hs
src/Data/HTTPSEverywhere/: Rules.hs
src/Data/HTTPSEverywhere/Rules/: Internal.hs
src/Data/HTTPSEverywhere/Rules/Internal/: Parser.hs  Raw.hs  Trie.hs  Types.hs
src/Data/HTTPSEverywhere/Rules/Internal/Trie/: Supercompilation.hs
src/Data/HTTPSEverywhere/Rules/Internal/Types/: Serialisable.hs
src/Data/Text/: RadixTrie.hs
src/Data/Text/ICU/: Extras.hs
test/Data/HTTPSEverywhere/Rules/Internal/: ParserSpec.hs
test/Data/Text/ICU/: ExtrasSpec.hs
