name:
  https-everywhere-rules
version:
  0.1.0
synopsis:
  High-level access to HTTPS Everywhere rulesets.
homepage:
  https://github.com/fmap/https-everywhere-rules
license:
  MIT
license-file:
  LICENSE
author:
  vi
maintainer:
  vi@zalora.com
category:
  Data
build-type:
  Simple
extra-source-files:
  README.md
cabal-version:
  >=1.10
data-dir:
  vendor/https-everywhere/src/chrome/content/rules
data-files:
-- A longstanding design error in Cabal requires data-files' full extension to
-- match exactly, so *.xml matches CERT.xml but not CERT.fi.xml. Last I checked,
-- specifying *.xml here would capture only capture about 70% of the rules in the
-- database. As a (temporary?) workaround, before upgrading the rules database,
-- repopulate this list with the output of:
--
--   find rules -name '*.xml' | sed 's/^[^.]*//' | sort -u | sed 's/^/*/'
--
-- If you have a better idea, LMK.
  *.ac.th.xml,
  *.ac.uk.xml,
  *.arizona.edu.xml,
  *.as.xml,
  *.at.xml,
  *.bbyo.org.xml,
  *.bg.xml,
  *.Bitcoin.cz.xml,
  *.biz.xml,
  *.BKA.gv.at.xml,
  *.bs.xml,
  *.cat.xml,
  *.ca.xml,
  *.cc.xml,
  *.CC.xml,
  *.Chevronwp7.com.xml,
  *.ch.xml,
  *.com.au.xml,
  *.com-breakchat.xml,
  *.com-break.xml,
  *.com-clients.xml,
  *.com-expired.xml,
  *.com-falsemixed.xml,
  *.com-noscript.xml,
  *.com.tr.xml,
  *.com.tw.xml,
  *.com.xml,
  *.Com.xml,
  *.coop.xml,
  *.co.th.xml,
  *.co.uk.xml,
  *.co.xml,
  *.co.za.xml,
  *.cz.xml,
  *.de-falsemixed.xml,
  *.demandprogress.org.xml,
  *.de-mixedcontent.xml,
  *.de.xml,
  *.dk.xml,
  *.ebm.fi.xml,
  *.edu.xml,
  *.English.Purdue.edu.xml,
  *.es.xml,
  *.eu.xml,
  *.fi.xml,
  *.fm.xml,
  *.fr-falsemixed.xml,
  *.fr.xml,
  *.fsdn.com.xml,
  *.go.jp.xml,
  *.govt.nz.xml,
  *.gov.xml,
  *.iet.unipi.it.xml,
  *.ie.xml,
  *.info.xml,
  *.int.xml,
  *.IN.xml,
  *.io.xml,
  *.is.xml,
  *.it.xml,
  *.jp.xml,
  *.kursuslogin.dk.xml,
  *.leseweb.dk.xml,
  *.li.xml,
  *.ly.xml,
  *.me.xml,
  *.mitre.org.xml,
  *.name.xml,
  *.net-falsemixed.xml,
  *.net-self-signed.xml,
  *.net.xml,
  *.NET.xml,
  *.nl.xml,
  *.no.xml,
  *.org-CACert.xml,
  *.org-falsemixed.xml,
  *.org.ru.xml,
  *.org-self-signed.xml,
  *.org.uk.xml,
  *.org.xml,
  *.pl.xml,
  *.proteste.pt.xml,
  *.pro.xml,
  *.pt.xml,
  *.Python.org.xml,
  *.Resource.Org.xml,
  *.ru.xml,
  *.se.xml,
  *.sh.xml,
  *.sk.xml,
  *.snoobi.com.xml,
  *.st.xml,
  *.surftown.com.xml,
  *.su.xml,
  *.sx.xml,
  *.theory.xml,
  *.to.xml,
  *.tv.xml,
  *.us.xml,
  *.utwente.xml,
  *.virtadpt.net.xml,
  *.xml

library
  exposed-modules:
    Data.HTTPSEverywhere.Rules
  other-modules:
    Data.HTTPSEverywhere.Rules.Internal,
    Data.HTTPSEverywhere.Rules.Internal.Parser,
    Data.HTTPSEverywhere.Rules.Internal.Raw,
    Data.HTTPSEverywhere.Rules.Internal.Types,
    Data.Text.ICU.Extras,
    Paths_https_everywhere_rules
  build-depends:
    base               >= 4.7  && < 4.10,
    attoparsec         >= 0.12 && < 0.14,
    directory          >= 1.2  && < 1.4,
    errors             >= 1.4  && < 2.2,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    http-client        >= 0.3  && < 0.6,
    lens               >= 4.3  && < 4.16,
    mtl                >= 2.2  && < 2.3,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.4,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite spec
  type:
    exitcode-stdio-1.0
  build-depends:
    base               >= 4.7  && < 4.10,
    attoparsec         >= 0.12 && < 0.14,
    directory          >= 1.2  && < 1.4,
    errors             >= 1.4  && < 2.2,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    hspec              >= 2.0  && < 2.5,
    http-client        >= 0.3  && < 0.6,
    lens               >= 4.3  && < 4.16,
    mtl                >= 2.2  && < 2.3,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.4,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8,
    https-everywhere-rules
  main-is:
    Spec.hs
  hs-source-dirs:
    src,
    test
  default-language:
    Haskell2010
  cpp-options:
    -DTEST
  ghc-options:
    -Wall
  other-modules:
    Data.HTTPSEverywhere.Rules.Internal,
    Data.HTTPSEverywhere.Rules.Internal.Parser,
    Data.HTTPSEverywhere.Rules.Internal.ParserSpec,
    Data.HTTPSEverywhere.Rules.Internal.Raw,
    Data.HTTPSEverywhere.Rules.Internal.Types,
    Data.HTTPSEverywhere.Rules.InternalSpec,
    Data.Text.ICU.Extras,
    Data.Text.ICU.ExtrasSpec

flag build-examples
  description:
    Whether to build the programs under "examples/".
  default:
    True
  manual:
    True

executable redirect-proxy
  hs-source-dirs:
    examples
  main-is:
    RedirectProxy.hs
  if flag(build-examples)
    build-depends:
      base >= 4.7  && < 4.10,
      bytestring,
      http-proxy,
      http-types,
      https-everywhere-rules,
      network-uri,
      wai
  if !(flag(build-examples))
    buildable:
      False
  default-language:
    Haskell2010

executable count-upgradeable
  hs-source-dirs:
    examples
  main-is:
    CountUpgradeable.hs
  if flag(build-examples)
    build-depends:
      base,
      foldl,
      https-everywhere-rules,
      network-uri,
      pipes
  if !(flag(build-examples))
    buildable:
      False
  default-language:
    Haskell2010