name:
  https-everywhere-rules
version:
  0.1.0
synopsis:
  High-level access to HTTPS Everywhere rulesets.
homepage:
  https://github.com/fmap/https-everywhere-rules
license:
  MIT
license-file:
  LICENSE
author:
  vi
maintainer:
  vi@zalora.com
category:
  Data
build-type:
  Simple
extra-source-files:
  README.md
cabal-version:
  >=1.10
data-dir:
  vendor/https-everywhere/src/chrome/content/rules
data-files:
-- A longstanding design error in Cabal requires data-files' full extension to
-- match exactly, so *.xml matches CERT.xml but not CERT.fi.xml. Last I checked,
-- specifying *.xml here would capture only capture about 70% of the rules in the
-- database. As a (temporary?) workaround, before upgrading the rules database,
-- repopulate this list with the output of:
--
--   find rules -name '*.xml' | sed 's/^[^.]*//' | sort -u | sed 's/^/*/'
--
-- If you have a better idea, LMK.
  *.0o0.ooo.xml,
  *.academy.xml,
  *.ac.at.xml,
  *.ac.il.xml,
  *.ac.in.xml,
  *.ac.jp-mixedcontent.xml,
  *.ac.jp-problematic.xml,
  *.ac.jp.xml,
  *.ac.nz.xml,
  *.ac.th.xml,
  *.ac.uk-falsemixed.xml,
  *.ac.uk.xml,
  *.ac.xml,
  *.ad.jp.xml,
  *.ad.xml,
  *.aero.xml,
  *.ae.xml,
  *.af.xml,
  *.agency.xml,
  *.ag.xml,
  *.ai.xml,
  *.al-problematic.xml,
  *.al.xml,
  *.amung.us.xml,
  *.am.xml,
  *.AM.xml,
  *.aq.xml,
  *.ar.xml,
  *.Ar.xml,
  *.asia.xml,
  *.Asia.xml,
  *.asn.au.xml,
  *.as.xml,
  *.at-mixedcontent.xml,
  *.at.xml,
  *.auction.xml,
  *.Au.xml,
  *.az.xml,
  *.bankia.es.xml,
  *.bank.xml,
  *.bayern.xml,
  *.bbyo.org.xml,
  *.be-falsemixed.xml,
  *.be-mixed.xml,
  *.berlin.xml,
  *.best.xml,
  *.be.xml,
  *.bg.xml,
  *.BG.xml,
  *.Bitcoin.cz.xml,
  *.biz-mixedcontent.xml,
  *.biz.xml,
  *.Biz.xml,
  *.BKA.gv.at.xml,
  *.blue.xml,
  *.Boutique.xml,
  *.browserscope.org.xml,
  *.br.xml,
  *.bs.xml,
  *.bund.de.xml,
  *.by.xml,
  *.bz.xml,
  *.camera.xml,
  *.ca-problematic.xml,
  *.cash.xml,
  *.cat.xml,
  *.ca.xml,
  *.Ca.xml,
  *.cc.xml,
  *.CC.xml,
  *.cd.xml,
  *.cf.xml,
  *.chat.xml,
  *.Chat.xml,
  *.ch-falsemixed.xml,
  *.ch-problematic.xml,
  *.ch.xml,
  *.city.xml,
  *.ci.xml,
  *.click.xml,
  *.club.xml,
  *.cl.xml,
  *.cm.xml,
  *.CM.xml,
  *.cn-mixedcontent.xml,
  *.cn.xml,
  *.CN.xml,
  *.co.at.xml,
  *.codes.xml,
  *.co-falsemixed.xml,
  *.coffee.xml,
  *.Coffee.xml,
  *.co.id.xml,
  *.co.il.xml,
  *.co.in.xml,
  *.co.jp-mixed.xml,
  *.co.jp.xml,
  *.co.kr.xml,
  *.com-API.xml,
  *.com.ar.xml,
  *.com.au-falsemixed.xml,
  *.com.au-problematic.xml,
  *.com.au.xml,
  *.com.bd.xml,
  *.com.bh.xml,
  *.com_blogs.xml,
  *.com.br.xml,
  *.com-CIties.xml,
  *.com-clients.xml,
  *.com.cn.xml,
  *.com.eg.xml,
  *.com-expired.xml,
  *.com-falsemixed.xml,
  *.com.gr.xml,
  *.com.hk.xml,
  *.com.lb.xml,
  *.com-mismatches.xml,
  *.com-mixedcontent.xml,
  *.com-mixed.xml,
  *.com-Mixed.xml,
  *.Community.xml,
  *.com.mu.xml,
  *.com.mx.xml,
  *.com.my.xml,
  *.com.ng.xml,
  *.com.om.xml,
  *.com.ph.xml,
  *.com-problematic.xml,
  *.com-Problematic.xml,
  *.com.pt.xml,
  *.computer.xml,
  *.com.qa.xml,
  *.com-resources.xml,
  *.com.ru.xml,
  *.com.sa.xml,
  *.com.sg.xml,
  *.com_Subdomains_Complex.xml,
  *.com_Subdomains.xml,
  *.com.tr.xml,
  *.com.tw-falsemixed.xml,
  *.com.tw.xml,
  *.com.ua.xml,
  *.com.vn.xml,
  *.com.xml,
  *.Com.xml,
  *.COM.xml,
  *.co.nz-problematic.xml,
  *.co.nz.xml,
  *.cool.xml,
  *.coop.xml,
  *.co.th.xml,
  *.Co.th.xml,
  *.co.tt.xml,
  *.co.uk-falsemixed.xml,
  *.co.uk-mixedcontent.xml,
  *.co.uk-mixed.xml,
  *.co.uk-problematic.xml,
  *.co.uk-resources.xml,
  *.co.uk.xml,
  *.co.xml,
  *.co.za.xml,
  *.cr.xml,
  *.cx.xml,
  *.CX.xml,
  *.cz-falsemixed.xml,
  *.cz_sk_pl.xml,
  *.cz_sk.xml,
  *.cz.xml,
  *.CZ.xml,
  *.dashitz.com.xml,
  *.decathlon.es.xml,
  *.de-falsemixed.xml,
  *.de-mixed.xml,
  *.de-problematic.xml,
  *.de.xml,
  *.DE.xml,
  *.digital.xml,
  *.Digital.xml,
  *.direct.xml,
  *.dj.xml,
  *.dk-falsemixed.xml,
  *.dk-mixedcontent.xml,
  *.dk-problematic.xml,
  *.dk-resources.xml,
  *.dk.xml,
  *.domains.xml,
  *.Domains.xml,
  *.earth.xml,
  *.ec.xml,
  *.edgesuite.net.xml,
  *.edu.au.xml,
  *.edu.cn.xml,
  *.edu-falsemixed.xml,
  *.edu.gh.xml,
  *.edu.hel.fi.xml,
  *.edu.hk.xml,
  *.edu-mixedcontent.xml,
  *.edu.mx.xml,
  *.edu-problematic.xml,
  *.edu-self-signed.xml,
  *.edu.sg.xml,
  *.edu.tr.xml,
  *.edu.tw-falsemixed.xml,
  *.edu.tw.xml,
  *.edu.xml,
  *.ee.xml,
  *.elgg.org.xml,
  *.email.xml,
  *.Email.xml,
  *.English.Purdue.edu.xml,
  *.es.xml,
  *.eu-falsemixed.xml,
  *.eu.xml,
  *.Eu.xml,
  *.expert.xml,
  *.fi-mixedvideo.xml,
  *.fi-problematic.xml,
  *.fi.xml,
  *.fm.xml,
  *.FM.xml,
  *.fonality.com.xml,
  *.foundation.xml,
  *.freifunk.net.xml,
  *.fr-falsemixed.xml,
  *.fr-mixedcontent.xml,
  *.fr-problematic.xml,
  *.fr.xml,
  *.gal.xml,
  *.ga.xml,
  *.gc.ca.xml,
  *.gd.xml,
  *.gg.xml,
  *.gi.xml,
  *.gob.ar-falsemixed.xml,
  *.gob.ar.xml,
  *.go.jp.xml,
  *.gouv.fr.xml,
  *.gov.au.xml,
  *.gov.cv.xml,
  *.gov-falsemixed.xml,
  *.gov.gi.xml,
  *.gov.hk.xml,
  *.gov.hu.xml,
  *.gov.ie.xml,
  *.gov.in.xml,
  *.gov-mixedcontent.xml,
  *.gov.pk.xml,
  *.gov.pl.xml,
  *.gov.pt.xml,
  *.gov-resources.xml,
  *.gov.ru.xml,
  *.gov.sa.xml,
  *.gov.sg.xml,
  *.govt.nz.xml,
  *.gov.tr.xml,
  *.gov.tw.xml,
  *.gov.uk-falsemixed.xml,
  *.gov.uk-mixedcontent.xml,
  *.gov.uk-problematic.xml,
  *.gov.uk-resources.xml,
  *.gov.uk.xml,
  *.gov.xml,
  *.gq.xml,
  *.group.xml,
  *.gr.xml,
  *.guru.xml,
  *.gv.at.xml,
  *.gwr.com.xml,
  *.gy-problematic.xml,
  *.gy.xml,
  *.help.xml,
  *.hk.xml,
  *.HK.xml,
  *.hostingas.lt.xml,
  *.host.xml,
  *.how.xml,
  *.ht.xml,
  *.hu_incomplete.xml,
  *.hu.xml,
  *.id.au.xml,
  *.id.lv.xml,
  *.id.xml,
  *.ie-falsemixed.xml,
  *.ie-problematic.xml,
  *.ie.xml,
  *.IE.xml,
  *.ifcdn.com.xml,
  *.im.xml,
  *.IM.xml,
  *.info.xml,
  *.Intevation.org.xml,
  *.in.th.xml,
  *.int.xml,
  *.in.xml,
  *.In.xml,
  *.IN.xml,
  *.io.xml,
  *.IO.xml,
  *.ir-expired.xml,
  *.ir.xml,
  *.is-falsemixed.xml,
  *.is.xml,
  *.Is.xml,
  *.it.xml,
  *.It.xml,
  *.jobandtalent.com.xml,
  *.jobs.xml,
  *.Jobs.xml,
  *.jo.xml,
  *.jp-falsemixed.xml,
  *.jp.xml,
  *.kr.xml,
  *.kuluttajavirasto.fi.xml,
  *.kursuslogin.dk.xml,
  *.kz.xml,
  *.land.xml,
  *.Land.xml,
  *.La.xml,
  *.lc.xml,
  *.legal.xml,
  *.leseweb.dk.xml,
  *.lgbt.xml,
  *.link.xml,
  *.live.xml,
  *.li.xml,
  *.london.xml,
  *.lt.xml,
  *.luup.info.xml,
  *.lu.xml,
  *.Lu.xml,
  *.lv.xml,
  *.ly-mismatches.xml,
  *.ly.xml,
  *.materialise.xml,
  *.matfyz.cz.xml,
  *.ma.xml,
  *.md.xml,
  *.mediamarkt.es.xml,
  *.media.xml,
  *.me-falsemixed.xml,
  *.metoffice.gov.uk.xml,
  *.me.xml,
  *.Me.xml,
  *.mff.cuni.cz.xml,
  *.mg.xml,
  *.mijndomeinreseller.nl.xml,
  *.mil.xml,
  *.mobi.xml,
  *.mod.uk.xml,
  *.moe.xml,
  *.Monash.xml,
  *.mp.xml,
  *.ms.xml,
  *.Ms.xml,
  *.mu-problematic.xml,
  *.mu.xml,
  *.mx.xml,
  *.my.xml,
  *.nagoya.xml,
  *.name.xml,
  *.nc.xml,
  *.ne.jp.xml,
  *.net.au.xml,
  *.net.br.xml,
  *.net.cn.xml,
  *.net-falsemixed.xml,
  *.netgate.com.xml,
  *.net.pl.xml,
  *.net-problematic.xml,
  *.Net-Registry.xml,
  *.net-resources.xml,
  *.net.sa.xml,
  *.net-self-signed.xml,
  *.net.ua.xml,
  *.net.uk.xml,
  *.network.xml,
  *.net.xml,
  *.Net.xml,
  *.NET.xml,
  *.news.xml,
  *.ngo.xml,
  *.ng.xml,
  *.nico.xml,
  *.ninja.xml,
  *.nl-cacert.xml,
  *.nl.xml,
  *.NL.xml,
  *.no-falsemixed.xml,
  *.no-problematic.xml,
  *.no.xml,
  *.nu.xml,
  *.nz.xml,
  *.odpadnes.sk.xml,
  *.onion.xml,
  *.online.xml,
  *.onl.xml,
  *.ON_UK.xml,
  *.ooo.xml,
  *.org.au-problematic.xml,
  *.org.au.xml,
  *.org.br.xml,
  *.org.cn.xml,
  *.org.de.xml,
  *.org.ec.xml,
  *.org-falsemixed.xml,
  *.org.hk.xml,
  *.org-mismatches.xml,
  *.org-mixedcontent.xml,
  *.org.mx.xml,
  *.org.nz.xml,
  *.org.pe.xml,
  *.org.pl.xml,
  *.org-problematic.xml,
  *.org.qa.xml,
  *.org-resources.xml,
  *.org.ru.xml,
  *.org-self-signed.xml,
  *.org.tr.xml,
  *.org.tw.xml,
  *.org.uk-falsemixed.xml,
  *.org.uk.xml,
  *.org_Way_Back_Machine.xml,
  *.org.xml,
  *.Org.xml,
  *.ORG.xml,
  *.or.id.xml,
  *.or.jp.xml,
  *.or.kr.xml,
  *.or.ug.xml,
  *.ovh.xml,
  *.paris.xml,
  *.patatje.eu.xml,
  *.pepephone.com.xml,
  *.pe.xml,
  *.pics.xml,
  *.pizza.xml,
  *.pk.xml,
  *.pl-falsemixed.xml,
  *.pl-mismatches.xml,
  *.pl-mixedcontent.xml,
  *.pl-problematic.xml,
  *.pl.ua.xml,
  *.pl.xml,
  *.pm.xml,
  *.police.uk-mixedcontent.xml,
  *.police.uk-resources.xml,
  *.police.uk.xml,
  *.pp.se.xml,
  *.premii.com.xml,
  *.press.xml,
  *.priv.at.xml,
  *.proteste.pt.xml,
  *.pro.xml,
  *.pr.xml,
  *.pt.xml,
  *.pub.xml,
  *.pw.xml,
  *.red.xml,
  *.report.xml,
  *.Resource.Org.xml,
  *.re.xml,
  *.rnl.tecnico.ulisboa.pt.xml,
  *.rocks.xml,
  *.Rossia.Org.xml,
  *.ro.xml,
  *.rs.xml,
  *.ru.com.xml,
  *.ru-falsemixed.xml,
  *.ru-mixedcontent.xml,
  *.ru.net.xml,
  *.ru-problematic.xml,
  *.rus.ec.xml,
  *.ru.xml,
  *.Ru.xml,
  *.RU.xml,
  *.sberbank.sk.xml,
  *.schuldt.info.xml,
  *.science.xml,
  *.scot.xml,
  *.sc.xml,
  *.se-falsemixed.xml,
  *.self.com.xml,
  *.se-problematic.xml,
  *.se.xml,
  *.sexy.xml,
  *.sg.xml,
  *.sh.xml,
  *.si-resources.xml,
  *.site.xml,
  *.si.xml,
  *.sk_cz.xml,
  *.sk.xml,
  *.sl.xml,
  *.sm.xml,
  *.social.xml,
  *.software.xml,
  *.solutions.xml,
  *.so.xml,
  *.space.xml,
  *.Space.xml,
  *.staywellsolutionsonline.com.xml,
  *.store.xml,
  *.st.xml,
  *.St.xml,
  *.surftown.com.xml,
  *.su.xml,
  *.swiss.xml,
  *.sx-falsemixed.xml,
  *.sx.xml,
  *.systems.xml,
  *.Systems.xml,
  *.taipei.xml,
  *.tatrabanka.sk.xml,
  *.technology.xml,
  *.tech.xml,
  *.tf.xml,
  *.theory.xml,
  *.tk.xml,
  *.tld_Subdomains.xml,
  *.tl.xml,
  *.tm.xml,
  *.Today.xml,
  *.tokyo.xml,
  *.Tools.xml,
  *.to.xml,
  *.toypics.net.xml,
  *.Trade.xml,
  *.training-falsemixed.xml,
  *.training.xml,
  *.Travel.xml,
  *.trust.xml,
  *.ttias.be.xml,
  *.tt.xml,
  *.tv.xml,
  *.TV.xml,
  *.tw.xml,
  *.ua-problematic.xml,
  *.ua.xml,
  *.ubi.com.xml,
  *.uk.com.xml,
  *.uk-falsemixed.xml,
  *.uk.net.xml,
  *.uk.xml,
  *.UK.xml,
  *.umblr.com.xml,
  *.us-mixedcontent.xml,
  *.us.xml,
  *.Us.xml,
  *.US.xml,
  *.utechsoft.com.xml,
  *.utwente.nl.xml,
  *.utwente.xml,
  *.uz.xml,
  *.vc.xml,
  *.vellum.cz.xml,
  *.Ventures.xml,
  *.vg.xml,
  *.virtadpt.net.xml,
  *.vn.xml,
  *.wa.gov.xml,
  *.wales.xml,
  *.Wales.xml,
  *.wbgames.com.xml,
  *.website.xml,
  *.wf.xml,
  *.wiki.xml,
  *.works.xml,
  *.ws.xml,
  *.WS.xml,
  *.wtf.xml,
  *.xml,
  *.xn--p1ai.xml,
  *.xxx.xml,
  *.xyz.xml,
  *.yandex.xml,
  *.yaziba.net.xml,
  *.yp.to.xml,
  *.yt.xml,
  *.zaragoza.es.xml,
  *.zdravie.sk.xml,
  *.zone.xml,
  *.Zone.xml

library
  exposed-modules:
    Data.HTTPSEverywhere.Rules
  other-modules:
    Data.HTTPSEverywhere.Rules.Internal,
    Data.HTTPSEverywhere.Rules.Internal.Parser,
    Data.HTTPSEverywhere.Rules.Internal.Raw,
    Data.HTTPSEverywhere.Rules.Internal.Types,
    Data.Text.ICU.Extras,
    Paths_https_everywhere_rules
  build-depends:
    base               >= 4.7  && < 4.10,
    attoparsec         >= 0.12 && < 0.14,
    directory          >= 1.2  && < 1.4,
    errors             >= 1.4  && < 2.2,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    http-client        >= 0.3  && < 0.6,
    lens               >= 4.3  && < 4.16,
    mtl                >= 2.2  && < 2.3,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.4,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite spec
  type:
    exitcode-stdio-1.0
  build-depends:
    base               >= 4.7  && < 4.10,
    attoparsec         >= 0.12 && < 0.14,
    directory          >= 1.2  && < 1.4,
    errors             >= 1.4  && < 2.2,
    filepath           >= 1.3  && < 1.5,
    functor-infix      >= 0.0  && < 0.1,
    hspec              >= 2.0  && < 2.5,
    http-client        >= 0.3  && < 0.6,
    lens               >= 4.3  && < 4.16,
    mtl                >= 2.2  && < 2.3,
    network            >= 2.6  && < 2.7,
    network-uri        >= 2.6  && < 2.7,
    pipes              >= 4.1  && < 4.4,
    string-conversions >= 0.3  && < 0.5,
    taggy-lens         >= 0.1  && < 0.2,
    text               >= 1.1  && < 1.3,
    text-icu           >= 0.6  && < 0.8,
    https-everywhere-rules
  main-is:
    Spec.hs
  hs-source-dirs:
    src,
    test
  default-language:
    Haskell2010
  cpp-options:
    -DTEST
  ghc-options:
    -Wall
  other-modules:
    Data.HTTPSEverywhere.Rules.Internal,
    Data.HTTPSEverywhere.Rules.Internal.Parser,
    Data.HTTPSEverywhere.Rules.Internal.ParserSpec,
    Data.HTTPSEverywhere.Rules.Internal.Raw,
    Data.HTTPSEverywhere.Rules.Internal.Types,
    Data.HTTPSEverywhere.Rules.InternalSpec,
    Data.Text.ICU.Extras,
    Data.Text.ICU.ExtrasSpec

flag build-examples
  description:
    Whether to build the programs under "examples/".
  default:
    True
  manual:
    True

executable redirect-proxy
  hs-source-dirs:
    examples
  main-is:
    RedirectProxy.hs
  if flag(build-examples)
    build-depends:
      base >= 4.7  && < 4.10,
      bytestring,
      http-proxy,
      http-types,
      https-everywhere-rules,
      network-uri,
      wai
  if !(flag(build-examples))
    buildable:
      False
  default-language:
    Haskell2010

executable count-upgradeable
  hs-source-dirs:
    examples
  main-is:
    CountUpgradeable.hs
  if flag(build-examples)
    build-depends:
      base,
      foldl,
      https-everywhere-rules,
      network-uri,
      pipes
  if !(flag(build-examples))
    buildable:
      False
  default-language:
    Haskell2010